--- a/backend-account/package.json
+++ b/backend-account/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "npx tsc && nodemon --exec ts-node src/index.ts",
+    "dev": "npx tsc && nodemon --exec ts-node ./src/index.ts",
     "test": "npx jest --colors --verbose --coverage --silent",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
@@ -34,6 +34,7 @@
     "jest": "^29.6.2",
     "mongodb-memory-server": "^8.14.0",
     "mongoose": "^7.4.2",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
